--- a/app/templates/artwork.html
+++ b/app/templates/artwork.html
@@ -29,7 +29,7 @@
 			<div class="[ row justify-content-center ]">
 				<div class="[ col-md-8 text-right py-4 ]">
 					<button id="js-edit_artwork" class="js-form-edit butt butt--edit" type="button">Edit</button>
-					<a href="{{ url_for('artwork_delete', artwork_id=artwork.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
+					<a href="{{ url_for('artwork_delete', id=artwork.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
 				</div>
 			</div>
 		{% endif %}
@@ -81,7 +81,7 @@
 
 
 								<div class="[ col-10 col-md-6 ]">
-									<a href="{{ url_for('artist', artist_id=artist.id) }}" class="is-active">{{ artist.name }}</a>
+									<a href="{{ url_for('artist', id=artist.id) }}" class="is-active">{{ artist.name }}</a>
 
 									<input id="js-datalist_artist-{{ loop.index }}" type="text" name="artists-{{ loop.index }}" list="artists" data-value="{{ artist.id }}" value="{{ artist.name }}" class="js-datalist-child js-datalist_artist [ form-control-plaintext d-none ]" readonly>
 									<!-- Call datalist macro function -->
@@ -128,7 +128,7 @@
 								</div>
 
 								<div class="[ col-10 col-md-6 mb-1 ]">
-									<a href="{{ url_for('exhibition', exhibition_id=exhibit.exhib.id) }}" class="is-active">{{ exhibit.exhib.name }}</a>
+									<a href="{{ url_for('exhibition', id=exhibit.exhib.id) }}" class="is-active">{{ exhibit.exhib.name }}</a>
 									<input id="js-datalist_exhibition-{{ loop.index }}" type="text" name="exhibitions-{{ loop.index }}" list="exhibitions" data-value="{{ exhibit.exhib.id }}" value="{{ exhibit.exhib.name }}" placeholder="Exhibition Name" class="js-datalist-child js-datalist_exhibition [ form-control-plaintext d-none ]" readonly>
 									{{ datalist("exhibitions", exhibitions) }}
 								</div>
@@ -142,7 +142,7 @@
 								</div>
 
 								<div class="[ col-10 col-md-6 ]">
-									<a href="{{ url_for('park', park_id=exhibit.nycpark.id) }}" class="is-active">{{ exhibit.nycpark.name }}</a>
+									<a href="{{ url_for('park', id=exhibit.nycpark.id) }}" class="is-active">{{ exhibit.nycpark.name }}</a>
 									<input id="js-datalist_park-{{ loop.index }}" type="text" name="parks-{{ loop.index }}" list="parks" data-value="{{ exhibit.nycpark.id }}" value="{{ exhibit.nycpark.name }}" placeholder="Park Name" class="js-datalist-child js-datalist_park [ form-control-plaintext d-none ]" readonly>
 									{{ datalist("parks", parks) }}
 								</div>
