--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -27,7 +27,7 @@
 		
 				{% for exhibition in active_exhibitions %}
 		
-					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
+					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
 					<ul class="[ list-unstyled p-0 ]">
 						<li>Start date: {{ exhibition.start_date }}</li>
 						<li>End date: {{ exhibition.end_date }}</li>
@@ -52,7 +52,7 @@
 
 				{% for exhibition in upcoming_exhibitions %}
 
-					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
+					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
 					<ul class="[ list-unstyled p-0 ]">
 						<li>Start date: {{ exhibition.start_date }}</li>
 						<li>End date: {{ exhibition.end_date }}</li>
@@ -78,7 +78,7 @@
 
 				{% for exhibition in recent_exhibitions %}
 
-					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
+					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
 					<ul class="[ list-unstyled p-0 ]">
 						<li>Start date: {{ exhibition.start_date }}</li>
 						<li>End date: {{ exhibition.end_date }}</li>
@@ -104,7 +104,7 @@
 
 				{% for exhibition in exhibitions %}
 
-					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', exhibition_id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
+					<h3 class="[ pt-3 ]"><a href="{{ url_for('exhibition', id=exhibition.id) }}">{{ exhibition.name }}</a></h3>
 					<ul class="[ list-unstyled p-0 ]">
 						<li>Exhibition Dates: {{ exhibition.start_date|date_format }} to {{ exhibition.end_date|date_format }}</li>
 						<li>Install Date(s): {{ exhibition.install_start|date_format }}{%if exhibition.install_end %} to {{ exhibition.install_end|date_format }}{% endif %}</li>
