--- a/app/templates/parks.html
+++ b/app/templates/parks.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block head_extras %}
+<script src="{{ url_for('static', filename='js/dist/main.bundle.js') }}"></script>
 {% endblock %}
 
 {% block title %}NYC Parks Database – Parks{% endblock %}
@@ -17,21 +18,16 @@
 		</div>
 	</section>
 
-	{% include "include/user.html" %}
-
-
-
 	<section id="section--search">
-		<div class="chunk [ row justify-content-center py-5 ]">
+		{% include "include/user.html" %}
+
+		<div class="[ row justify-content-center py-5 ]">
 			<div class="[ col-md-8 ]">
 				<form id="js-form_search" action="/search" method="POST">
 					{{ form.csrf_token }}
 
 					<div class="[ d-none ]">
 						{{ form.class_object(class="form-control", value="Park") }}
-					</div>
-					<div class="[ d-none ]">
-						{{ form.class_id(class="form-control", value="park_id") }}
 					</div>
 
 					<div class="[ input-group ]">
