--- a/app/templates/exhibitions.html
+++ b/app/templates/exhibitions.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block head_extras %}
+<script src="{{ url_for('static', filename='js/dist/main.bundle.js') }}"></script>
 {% endblock %}
 {% block title %}NYC Parks Database – Exhibitions{% endblock %}
 {% block content %}
