Set buttons to .text-right

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -53,7 +53,7 @@
 
 				<section id="section--submit">
 					<div class="[ row justify-content-center ]">
-						<div class="[ col-md-8 py-4 align-self-end ]">
+						<div class="[ col-md-8 py-4 text-right ]">
 							<button id="js-cancel_login" class="butt butt--delete js-cancel-login" type="button">Cancel</button>
 							<input id="js-post_login" class="butt butt--add js-post-login [ ml-2 ]" value="Login" type="submit" />
 						</div>
