Comment out featured section

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
 
 	{% include "include/user.html" %}
 
-	<section id="section--featured">
+	<!-- <section id="section--featured">
 		<div class="[ row py-4 ]">
 
 			<div class="[ col-md-4 order-1 order-md-2 ]">
@@ -50,7 +50,7 @@
 			</div>
 
 		</div>
-	</section>
+	</section> -->
 
 
 
