Add .head__h1 tags

--- a/app/templates/park.html
+++ b/app/templates/park.html
@@ -12,7 +12,7 @@
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
 			<div class="[ col-md-8 ]">
-				<h1 class="head--parks [ text-center display-3 ]"><b>{{ park.name|upper }}</b></h1>
+				<h1 class="head__h1 head__h1--parks [ text-center display-3 ]"><b>{{ park.name|upper }}</b></h1>
 			</div>
 		</div>
 	</section>
