--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -12,7 +12,7 @@
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
 			<div class="[ col-sm-12 col-md-8 ]">
-				<h1 class="[ text-center display-3 ]"><b>{{ exhibition.name|upper }}</b></h1>
+				<h1 class="head__h1 head__h1--exhibitions [ text-center display-3 ]"><b>{{ exhibition.name|upper }}</b></h1>
 			</div>
 		</div>
 	</section>
