--- a/app/templates/org.html
+++ b/app/templates/org.html
@@ -13,7 +13,7 @@
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
 			<div class="[ col-sm-12 col-md-8 ]">
-				<h1 class="[ text-center display-3 ]"><b>{{ org.name|upper }}</b></h1>
+				<h1 class="head__h1 head__h1--orgs [ text-center display-4 ]"><b>{{ org.name|upper }}</b></h1>
 			</div>
 		</div>
 	</section>
