--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -35,111 +35,107 @@
 			{% endif %}
 
 			<section id="section--bio">
-				<div class="chunk">
-					<div class="[ row justify-content-center ]">
-						<div class="[ col-md-8 ]">
-							<h2 class="[ display-4 py-4 ]">Bio</h2>
-
-							<ul class="js-ul_artwork [ p-0 ]">
-
-								<li class="[ row mb-3 align-items-baseline d-none ]">
-									<div class="[ col-md-3 ]">
-										{{ form.fName.label }}
-									</div>
-									<div class="[ col-md-6 ]">
-										{{ form.fName(class="form-control-plaintext", value=artist.fName) }}
-									</div>
-								</li>
-
-								<li class="[ row mb-3 align-items-baseline d-none ]">
-									<div class="[ col-md-3 ]">
-										{{ form.pName.label }}
-									</div>
-									<div class="[ col-md-6 ]">
-										{{ form.pName(class="form-control-plaintext", value=artist.pName) }}
-									</div>
-								</li>
-
-								<li class="[ row mb-3 align-items-baseline ]">
-									<div class="[ col-md-3 ]">
-										{{ form.email.label }}
-									</div>
-									<div class="[ col-md-6 ]">
-										{{ form.email(class="form-control-plaintext", value=artist.email, readonly=true) }}
-									</div>
-								</li>
-
-								<li class="[ row mb-3 align-items-baseline ]">
-									<div class="[ col-md-3 ]">
-										{{ form.phone.label }}
-									</div>
-									<div class="[ col-md-6 ]">
-										<p class="is-active [ m-0 ]">{% if artist.phone %}{{ artist.phone }}{% else %}None{% endif %}</p>
-										{{ form.phone(class="form-control-plaintext d-none", value=artist.phone,) }}
-									</div>
-								</li>
-
-								<li class="[ row mb-3 align-items-baseline ]">
-									<div class="[ col-md-3 ]">
-										{{ form.website.label }}
-									</div>
-									<div class="[ col-md-6 ]">
-										<p class="is-active [ m-0 ]">{% if artist.website %}<a href="http://{{ artist.website }}" class="is-active">{{ artist.website }}</a>{% else %}None{% endif %}</p>
-										{{ form.website(class="form-control-plaintext d-none", value=artist.website) }}
-									</div>
-								</li>
-
-							</ul>
-
-						</div>
+				<div class="chunk [ row justify-content-center ]">
+					<div class="[ col-md-8 ]">
+						<h2 class="[ display-4 py-4 ]">Bio</h2>
+				
+						<ul class="js-ul_artwork [ p-0 ]">
+				
+							<li class="[ row mb-3 align-items-baseline d-none ]">
+								<div class="[ col-md-3 ]">
+									{{ form.fName.label }}
+								</div>
+								<div class="[ col-md-6 ]">
+									{{ form.fName(class="form-control-plaintext", value=artist.fName) }}
+								</div>
+							</li>
+				
+							<li class="[ row mb-3 align-items-baseline d-none ]">
+								<div class="[ col-md-3 ]">
+									{{ form.pName.label }}
+								</div>
+								<div class="[ col-md-6 ]">
+									{{ form.pName(class="form-control-plaintext", value=artist.pName) }}
+								</div>
+							</li>
+				
+							<li class="[ row mb-3 align-items-baseline ]">
+								<div class="[ col-md-3 ]">
+									{{ form.email.label }}
+								</div>
+								<div class="[ col-md-6 ]">
+									{{ form.email(class="form-control-plaintext", value=artist.email, readonly=true) }}
+								</div>
+							</li>
+				
+							<li class="[ row mb-3 align-items-baseline ]">
+								<div class="[ col-md-3 ]">
+									{{ form.phone.label }}
+								</div>
+								<div class="[ col-md-6 ]">
+									<p class="is-active [ m-0 ]">{% if artist.phone %}{{ artist.phone }}{% else %}None{% endif %}</p>
+									{{ form.phone(class="form-control-plaintext d-none", value=artist.phone,) }}
+								</div>
+							</li>
+				
+							<li class="[ row mb-3 align-items-baseline ]">
+								<div class="[ col-md-3 ]">
+									{{ form.website.label }}
+								</div>
+								<div class="[ col-md-6 ]">
+									<p class="is-active [ m-0 ]">{% if artist.website %}<a href="http://{{ artist.website }}" class="is-active">{{ artist.website }}</a>{% else %}None{% endif %}</p>
+									{{ form.website(class="form-control-plaintext d-none", value=artist.website) }}
+								</div>
+							</li>
+				
+						</ul>
+				
 					</div>
 				</div>
 			</section>
 
 			<section id="section--artworks">
-				<div class="chunk">
-					<div class="[ row justify-content-center py-4 ]">
-						<div class="[ col-md-8 ]">
-							<h2 class="[ display-4 pt-4 pb-3 ]">Artworks</h2>
-		
-							<div class="[ row justify-content-center d-none ]">
-								<div class="[ col-12 text-right pb-4 ]">
-									<button id="js-add_artwork" class="js-add-li butt butt--add [ ml-2 ]" type="button">Add</button>
-								</div>
+				<div class="chunk [ row justify-content-center py-4 ]">
+					<div class="[ col-md-8 ]">
+						<h2 class="[ display-4 pt-4 pb-3 ]">Artworks</h2>
+						
+						<div class="[ row justify-content-center d-none ]">
+							<div class="[ col-12 text-right pb-4 ]">
+								<button id="js-add_artwork" class="js-add-li butt butt--add [ ml-2 ]" type="button">Add</button>
 							</div>
-		
-							<ul class="js-ul-child js-ul_artworks [ p-0 ]">
-		
-								{% for artwork in artist.artworks %}
-									<li class="artist__li--artworks [ row mb-3 align-items-baseline ]">
-		
-										<div class="[ col-md-3 ]">
-											<label for="art_name">Artwork</label>
-										</div>
-		
-										<div class="[ col-md-6 ]">
-											<a href="{{ url_for('artwork', id=artwork.id) }}" class="is-active">{{ artwork.name }}</a>
-		
-											<input id="js-datalist_artwork-{{ loop.index }}" type="text" name="artworks-{{ loop.index }}" list="artworks" data-value="{{ artwork.id }}" value="{{ artwork.name }}" class="js-datalist-child js-datalist_artwork [ form-control-plaintext d-none ]">
-											<!-- Call datalist macro function -->
-											{{ datalist("artworks", artworks) }}
-										</div>
-		
-										<div class="[ col-2 ]">
-											<button class="js-delete-li butt butt--delete-icon [ d-none ]" type="button"><i class="far fa-times-circle"></i></button>
-										</div>
-		
-									</li>
-		
-								{% else %}
-		
-									<p class="[ is-active ]"><i>There are no artworks connected with {{ artist.name }}.</i></p>
-		
-								{% endfor %}
-		
-							</ul>
-		
 						</div>
+						
+						<ul class="js-ul-child js-ul_artworks [ p-0 ]">
+						
+							{% for artwork in artist.artworks %}
+								<li class="artist__li--artworks [ row mb-3 align-items-baseline ]">
+						
+									<div class="[ col-md-3 ]">
+										<label for="art_name">Artwork</label>
+									</div>
+						
+									<div class="[ col-md-6 ]">
+										<a href="{{ url_for('artwork', id=artwork.id) }}" class="is-active">{{ artwork.name }}</a>
+						
+										<input id="js-datalist_artwork-{{ loop.index }}" type="text" name="artworks-{{ loop.index }}" list="artworks" data-value="{{ artwork.id }}" value="{{ artwork.name }}" class="js-datalist-child js-datalist_artwork [ form-control-plaintext d-none ]">
+										<!-- Call datalist macro function -->
+										{{ datalist("artworks", artworks) }}
+									</div>
+						
+									<div class="[ col-2 text-right ]">
+										<button class="js-delete-li butt butt--delete-icon [ d-none ]" type="button"><i class="far fa-times-circle"></i></button>
+									</div>
+						
+								</li>
+						
+							{% else %}
+						
+								<p class="[ is-active ]"><i>There are no artworks connected with {{ artist.name }}.</i></p>
+						
+							{% endfor %}
+						
+						</ul>
+						
 					</div>
 				</div>
 			</section>
@@ -189,7 +185,7 @@
 														<!-- {{ datalist("exhibitions", exhibitions) }}
 													</div>
 
-													<div class="col-md-2">
+													<div class="[ col-md-2 text-right ]">
 														<button type="button" class="butt butt--delete-icon form_remove [ d-none ]"><i class="far fa-times-circle"></i></button>
 													</div>
 
@@ -231,7 +227,7 @@
 
 			{% if current_user.is_authenticated %}
 				<section id="section--submit">
-					<div class="[ row justify-content-center d-none ]">
+					<div class="chunk [ row justify-content-center d-none ]">
 						<div class="[ col-md-8 text-right py-4 ]">
 							<button id="js-cancel_artist" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
 							<button id="js-post_artist" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
@@ -255,7 +251,7 @@
 			{{ datalist("artworks", artworks) }}
 		</div>
 
-		<div class="[ col-2 ]">
+		<div class="[ col-2 text-right ]">
 			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 
