Remove col-md-3 from delete icon buttons

--- a/app/templates/exhibition.html
+++ b/app/templates/exhibition.html
@@ -138,7 +138,7 @@
 									<input id="js-datalist_org-{{ loop.index }}" type="text" name="orgs-{{ loop.index }}" list="orgs" data-value="{{ org.id }}" value="{{ org.name }}" class="js-datalist-child js-datalist_org [ form-control-plaintext d-none ]">
 									{{ datalist("orgs", orgs) }}
 								</div>
-								<div class="[ col-2 col-md-3 ]">
+								<div class="[ col-2 ]">
 									<button class="js-delete-li butt butt--delete-icon [ px-2 d-none ]" type="button"><i class="far fa-times-circle"></i></button>
 								</div>
 							</li>
@@ -179,7 +179,7 @@
 									<input id="js-datalist_artwork-{{ loop.index }}" type="text" name="artworks-{{ loop.index }}" list="artworks" data-value="{{ item.artw.id }}" value="{{ item.artw.name }}" class="js-datalist-child js-datalist_artwork [ form-control-plaintext d-none ]">
 									{{ datalist("artworks", artworks) }}
 								</div>
-								<div class="[ col-2 col-md-3 ]">
+								<div class="[ col-2 ]">
 									<button class="js-delete-li butt butt--delete-icon [ px-2 d-none ]" type="button"><i class="far fa-times-circle"></i></button>
 								</div>
 
@@ -384,7 +384,7 @@
 			<input id="js-datalist_artwork" type="text" name="artworks" list="artworks" data-value="" value="" placeholder="Artwork Name" class="js-datalist-child js-datalist_artwork [ form-control ]">
 			{{ datalist("artworks", artworks) }}
 		</div>
-		<div class="[ col-2 col-md-3 ]">
+		<div class="[ col-2 ]">
 			<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 		<div class="[ col-md-3 ]">
@@ -408,7 +408,7 @@
 			<input id="js-datalist_org" type="text" name="orgs" list="orgs" data-value="" value="" placeholder="Organization Name" class="js-datalist-child js-datalist_org [ form-control ]">
 			{{ datalist("orgs", orgs) }}
 		</div>
-		<div class="[ col-2 col-md-3 ]">
+		<div class="[ col-2 ]">
 			<button class="js-delete-li butt butt--delete-icon [ px-2 ]" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 	</li>
