--- a/app/templates/artists.html
+++ b/app/templates/artists.html
@@ -41,7 +41,7 @@
 	</section>
 
 	<section id="section--artists">
-		<div class="[ row justify-content-center py-5 ]">
+		<div class="chunk [ row justify-content-center py-5 ]">
 			<div class="[ col-md-8 ]">
 
 				{% for artist in artists %}
