--- a/app/templates/org.html
+++ b/app/templates/org.html
@@ -149,11 +149,11 @@
 		<div class="[ col-md-3 ]">
 			<label for="exhibitions">Exhibition</label>
 		</div>
-		<div class="[ col-md-6 ]">
+		<div class="[ col-10 col-md-6 ]">
 			<input id="js-datalist_exhibition" type="text" name="exhibitions" list="exhibitions" data-value="" value="" placeholder="Exhibition Name" class="js-datalist-child js-datalist_exhibition [ form-control ]">
 			{{ datalist("exhibitions", exhibitions) }}
 		</div>
-		<div class="[ col-md-2 ]">
+		<div class="[ col-2 ]">
 			<button class="js-delete-li butt butt--delete-icon" type="button"><i class="far fa-times-circle"></i></button>
 		</div>
 	</li>
