--- a/app/templates/artist.html
+++ b/app/templates/artist.html
@@ -27,7 +27,7 @@
 
 			{% if current_user.is_authenticated %}
 				<div class="[ row justify-content-center ]">
-					<div class="[ col-md-8 text-right py-4 ]">
+					<div class="[ col-md-8 text-right py-5 ]">
 						<button id="js-edit_artist" class="js-form-edit butt butt--edit" type="button">Edit</button>
 						<a href="{{ url_for('artist_delete', id=artist.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
 					</div>
@@ -35,12 +35,12 @@
 			{% endif %}
 
 			<section id="section--bio">
-				<div class="chunk [ row justify-content-center ]">
+				<div class="chunk [ row justify-content-center py-5 ]">
 					<div class="[ col-md-8 ]">
 						<h2 class="[ display-4 py-4 ]">Bio</h2>
-				
+
 						<ul class="js-ul_artwork [ p-0 ]">
-				
+
 							<li class="[ row mb-3 align-items-baseline d-none ]">
 								<div class="[ col-md-3 ]">
 									{{ form.fName.label }}
@@ -49,7 +49,7 @@
 									{{ form.fName(class="form-control-plaintext", value=artist.fName) }}
 								</div>
 							</li>
-				
+
 							<li class="[ row mb-3 align-items-baseline d-none ]">
 								<div class="[ col-md-3 ]">
 									{{ form.pName.label }}
@@ -58,7 +58,7 @@
 									{{ form.pName(class="form-control-plaintext", value=artist.pName) }}
 								</div>
 							</li>
-				
+
 							<li class="[ row mb-3 align-items-baseline ]">
 								<div class="[ col-md-3 ]">
 									{{ form.email.label }}
@@ -67,7 +67,7 @@
 									{{ form.email(class="form-control-plaintext", value=artist.email, readonly=true) }}
 								</div>
 							</li>
-				
+
 							<li class="[ row mb-3 align-items-baseline ]">
 								<div class="[ col-md-3 ]">
 									{{ form.phone.label }}
@@ -77,7 +77,7 @@
 									{{ form.phone(class="form-control-plaintext d-none", value=artist.phone,) }}
 								</div>
 							</li>
-				
+
 							<li class="[ row mb-3 align-items-baseline ]">
 								<div class="[ col-md-3 ]">
 									{{ form.website.label }}
@@ -87,15 +87,15 @@
 									{{ form.website(class="form-control-plaintext d-none", value=artist.website) }}
 								</div>
 							</li>
-				
+
 						</ul>
-				
+
 					</div>
 				</div>
 			</section>
 
 			<section id="section--artworks">
-				<div class="chunk [ row justify-content-center py-4 ]">
+				<div class="chunk [ row justify-content-center py-5 ]">
 					<div class="[ col-md-8 ]">
 						<h2 class="[ display-4 pt-4 pb-3 ]">Artworks</h2>
 						
@@ -227,7 +227,7 @@
 
 			{% if current_user.is_authenticated %}
 				<section id="section--submit">
-					<div class="chunk [ row justify-content-center d-none ]">
+					<div class="[ row justify-content-center d-none py-5 ]">
 						<div class="[ col-md-8 text-right py-4 ]">
 							<button id="js-cancel_artist" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
 							<button id="js-post_artist" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
