--- a/app/templates/org.html
+++ b/app/templates/org.html
@@ -12,7 +12,7 @@
 	<section id="section--head">
 		{% include "include/nav.html" %}
 		<div class="head [ row justify-content-center align-items-center ]">
-			<div class="[ col-sm-12 col-md-8 ]">
+			<div class="[ col-md-8 ]">
 				<h1 class="head__h1 head__h1--orgs [ text-center display-4 ]"><b>{{ org.name|upper }}</b></h1>
 			</div>
 		</div>
@@ -28,7 +28,7 @@
 
 		{% if current_user.is_authenticated %}
 			<div class="[ row justify-content-center ]">
-				<div class="[ col-sm-12 col-md-8 text-right pt-5 pb-4 ]">
+				<div class="[ col-md-8 text-right py-5 ]">
 					<button id="js-edit_org" class="js-form-edit butt butt--edit" type="button">Edit</button>
 					<a href="{{ url_for('org_delete', id=org.id) }}" class="butt butt--delete [ btn btn-sm ]" role="button">Delete</a>
 				</div>
@@ -38,8 +38,8 @@
 
 
 		<section id="section--bio">
-			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-8">
+			<div class="chunk [ row justify-content-center py-5 ]">
+				<div class="[ col-md-8 ]">
 					<h2 class="[ display-4 py-4 ]">Bio</h2>
 
 					<ul class="js-ul_org [ p-0 ]">
@@ -81,8 +81,8 @@
 
 
 		<section id="section--exhibitions">
-			<div class="[ row justify-content-center py-4 ]">
-				<div class="[ col-sm-12 col-md-8 ]">
+			<div class="chunk [ row justify-content-center py-5 ]">
+				<div class="[ col-md-8 ]">
 					<h2 class="[ display-4 py-4 ]">Exhibitions</h2>
 
 					<div class="[ row justify-content-center ]">
@@ -130,8 +130,8 @@
 
 		{% if current_user.is_authenticated %}
 			<section id="section--submit">
-				<div class="[ row justify-content-center d-none ]">
-					<div class="[ col-sm-12 col-md-8 text-right py-4 ]">
+				<div class="[ row justify-content-center d-none py-5 ]">
+					<div class="[ col-md-8 text-right py-4 ]">
 						<button id="js-cancel_org" class="butt butt--delete js-cancel-form" type="button">Cancel</button>
 						<button id="js-post_org" class="butt butt--add js-update-form [ ml-2 ]" value="Create" type="button">Update</button>
 					</div>
