--- a/app/templates/orgs.html
+++ b/app/templates/orgs.html
@@ -44,7 +44,7 @@
 
 
 	<section id="section--orgs">
-		<div class="[ row justify-content-center py-5 ]">
+		<div class="chunk [ row justify-content-center py-5 ]">
 			<div class="[ col-md-8 ]">
 
 				{% for org in orgs %}
