--- a/app/static/css/layout.css
+++ b/app/static/css/layout.css
@@ -50,16 +50,25 @@
 		min-width: 0rem;
 	}
 
-		.site-nav__link a {
-			color: #58595b;
-			text-decoration: none;
-			border-bottom: 2px
-			solid #b8dd9b;
+		.site-nav__link {
+			padding: 0;
 		}
 
-		.site-nav__link:hover a {
-			color:  #b8dd9b;
-		}
+			.site-nav__link a {
+				color: #58595b;
+				text-decoration: none;
+				border-bottom: none;
+				padding: .25rem 1rem;
+				display: inline-block;
+				width: 100%;
+				height: 100%;
+			}
+
+
+
+			.site-nav__link:hover a {
+				color:  #b8dd9b;
+			}
 
 
 
@@ -83,9 +92,9 @@
 	/* Set nav position to fixed on larger screens */
 	.site-nav {
 		position: fixed;
-		width: 130px;
-		top: 35px;
-		left: 15px;
+		width: 110px;
+		top: 45px;
+		left: 25px;
 	}
 
 }
